Adjust decode for used java version